--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,27 @@
-dist
+**/*/dist
+/bin
+/lib
+/share
+/packages
+*-packages.conf.d
 cabal-dev
+add-source-timestamps
 *.o
 *.hi
 *.chi
 *.chs.h
 *.dyn_o
 *.dyn_hi
+.virtualenv
 .hpc
 .hsenv
 .cabal-sandbox/
 cabal.sandbox.config
+cabal.config
 *.prof
 *.aux
 *.hp
-.stack-work/
+Setup
+.stack-work
+shell.nix
+default.nix
