--- a/servant-contrib/servant-contrib.cabal
+++ b/servant-contrib/servant-contrib.cabal
@@ -35,6 +35,7 @@ library
     , servant         == 0.9.*
     , http-api-data   >= 0.3  && <0.4
     , regex-tdfa      >= 1.2.0 && < 1.3
+    , semigroups      >= 0.16.2.2 && <0.19
     , text
   hs-source-dirs: src
   default-language: Haskell2010
